--- a/lections/lection_24_Ajax/materials/server/package.json
+++ b/lections/lection_24_Ajax/materials/server/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+   "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
